syntax = "proto3";

package core;

import "guest.proto";
import "rtc.proto";

message Node {
    string id = 1;
    string region = 2;
    NodeStats stats = 3;
}

message NodeStats {
    int64 started_at = 1;
    int64 updated_at = 2;

    // room
    int32 num_rooms = 4;
    int32 num_participants = 5;

    // system
    uint32 num_cpus = 6;
    float cpu_load = 7;
    float memory_load = 8;
}

message NodeMessage {
    oneof message {
        CreateRoom create_room = 1;
        // real time communication with room participants
        SignalRequest signal_request = 2;        
        SignalResponse signal_response = 3;
        // guest join flow
        GuestJoinRequest guest_join_request = 4;        
        GuestRequestCancelled guest_request_cancelled = 5;        
        GuestJoinResponse guest_join_response = 6;        
    }
}

message CreateRoom {
    string room_id = 1;
}